[Arun/Dinesh/Saran] Getting the count of interviews

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <main>
     <h1>Hello RecruitX</h1>
-    <!--<img src="../../public/images/angular.png">-->
+    <interview-stats></interview-stats>
 </main>
