--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main>
     <h1>RecruitX</h1>
-    <interview-stats *ngIf="pageNumber === 0" [interviews]="interviews"></interview-stats>
-    <pair-with *ngIf="pageNumber === 1"></pair-with>
+    <interview-stats *ngIf="pageNumber === 1" [interviews]="interviews"></interview-stats>
+    <pair-with *ngIf="pageNumber === 0" [interviews]="interviews"></pair-with>
 </main>
