--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <main>
     <h1>RecruitX</h1>
-    <interview-stats *ngIf="pageNumber === 1" [interviews]="interviews"></interview-stats>
     <pair-with *ngIf="pageNumber === 0" [interviews]="interviews"></pair-with>
+    <to-thank *ngIf="pageNumber === 1" [interviews]="interviews"></to-thank>
+    <interview-stats *ngIf="pageNumber === 2" [interviews]="interviews"></interview-stats>
 </main>
