--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,7 +13,6 @@ body {
     text-align: center;
     background: #2977f4;
 }
-
 .title {
     font-size: 80px;
     font-weight: 700;
@@ -24,4 +23,8 @@ body {
     font-size: 60px;
     line-height: 1.3em;
     text-align: center;
+}
+.images{
+    padding: 20px;
+    background-color: aliceblue;
 }
