--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,7 @@
     <pair-with *ngIf="pageNumber === 0" [interviews]="interviews"></pair-with>
     <to-thank *ngIf="pageNumber === 1" [interviews]="interviews"></to-thank>
     <interview-stats *ngIf="pageNumber === 2" [interviews]="interviews"></interview-stats>
+    <interview-stats *ngIf="pageNumber === 0" [interviews]="interviews"></interview-stats>
+    <pair-with *ngIf="pageNumber === 1"></pair-with>
+    <skils-stats [interviews]="interviews"></skils-stats >
 </main>
