--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
     <h1>RecruitX</h1>
     <pair-with *ngIf="pageNumber === 0" [interviews]="interviews"></pair-with>
     <to-thank *ngIf="pageNumber === 1" [interviews]="interviews"></to-thank>
-    <skils-stats *ngIf="pageNumber === 2" [interviews]="interviews"></skils-stats >
+    <skills-stats *ngIf="pageNumber === 2" [interviews]="interviews"></skills-stats >
     <interview-stats *ngIf="pageNumber === 3" [interviews]="interviews"></interview-stats>
 </main>
