[Arun] basic set up for protractor test

--- a/src/app/skills-stats/skills-stats.component.html
+++ b/src/app/skills-stats/skills-stats.component.html
@@ -1,5 +1,5 @@
 <h1>Are you comfortable with</h1>
-<div >
+<div data-qa="images" >
 <img src="../../../public/images/Python.png" class="images" *ngIf="isCandidateSkill('Python')" style="width:128px;height:128px;"/>
 <img src="../../../public/images/Java.png" class="images" *ngIf="isCandidateSkill('Java')" style="width:128px;height:128px;">
 <img src="../../../public/images/Ruby.png" class="images" *ngIf="isCandidateSkill('Ruby')" style="width:128px;height:128px;">
