[Saran] Apply style for skills-stat page
- move header title to 'div'

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,6 +25,6 @@ body {
     text-align: center;
 }
 .images{
-    padding: 20px;
-    background-color: aliceblue;
+    padding: 2em;
+    background-color: transparent;
 }
