[Arun] added basic line graph page with stub data

--- a/src/app/skills-stats/skills-stats.component.html
+++ b/src/app/skills-stats/skills-stats.component.html
@@ -1,6 +1,6 @@
 
 <div class="title">Are you comfortable with?</div>
-<div>
+<div class="images">
     <img src="../../../public/images/Python.png" class="images" *ngIf="isCandidateSkill('Python')"
          style="width:128px;height:128px;"/>
     <img src="../../../public/images/Java.png" class="images" *ngIf="isCandidateSkill('Java')"
