--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
     <to-thank *ngIf="pageNumber === 1" [interviews]="interviews"></to-thank>
     <skills-stats *ngIf="pageNumber === 2" [interviews]="interviews"></skills-stats >
     <interview-stats *ngIf="pageNumber === 3" [interviews]="interviews"></interview-stats>
+    <line-chart *ngIf="pageNumber === 4"></line-chart>
 </main>
