[Arun] changes in skils-stats.html as per UX

--- a/src/app/skills-stats/skills-stats.component.html
+++ b/src/app/skills-stats/skills-stats.component.html
@@ -1,4 +1,5 @@
-
+<img src="../../../public/images/Bulb.png"
+     style="width:128px;height:128px;"/>
 <div class="title">Are you comfortable with?</div>
 <div class="images">
     <img src="../../../public/images/Python.png" class="images" *ngIf="isCandidateSkill('Python')"
