--- a/src/app/interview-stats/interview-stats.component.html
+++ b/src/app/interview-stats/interview-stats.component.html
@@ -1,6 +1,6 @@
 <div>
     <div class="title">Upcoming interviews</div>
-    <div class="circle"><span>DEV: {{getInterviewsFor("Dev")}}</span></div>
-    <div class="circle"><span>QA: {{getInterviewsFor("QA")}}</span></div>
-    <div class="circle"><span>PM/BA: {{getInterviewsFor("PM/BA")}}</span></div>
+    <div class="circle qa"><span>QA: {{getInterviewsFor("QA")}}</span></div>
+    <div class="circle dev"><span>DEV: {{getInterviewsFor("Dev")}}</span></div>
+    <div class="circle ba"><span>PM/BA: {{getInterviewsFor("PM/BA")}}</span></div>
 </div>
