--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,6 +11,7 @@ body {
     color: #fff;
     line-height: 400px;
     text-align: center;
+    margin: 0 20px;
 }
 .dev{
     background: #8ea646;
@@ -37,6 +38,6 @@ body {
     background-color: transparent;
 }
 .row{
-    width: 600px;
+    width: 100%;
     height: 600px;
 }
