--- a/src/app/line-chart/line-chart.component.html
+++ b/src/app/line-chart/line-chart.component.html
@@ -1,8 +1,8 @@
 <div class="row">
     <div class="col-md-6">
-        <div style="display: block;">
+        <div style="display: block;" *ngIf="lineChartData().length >0">
             <canvas baseChart width="1400" height="600"
-                    [datasets]="lineChartData"
+                    [datasets]="lineChartData()"
                     [labels]="lineChartLabels"
                     [options]="lineChartOptions"
                     [colors]="lineChartColors"
