--- a/src/app/skills-stats/skills-stats.component.html
+++ b/src/app/skills-stats/skills-stats.component.html
@@ -1,15 +1,9 @@
-<img src="../../../public/images/Bulb.png"
-     style="width:128px;height:128px;"/>
+<img src="../../../public/images/Bulb.png"/>
 <div class="title">Are you comfortable with?</div>
 <div class="images">
-    <img src="../../../public/images/Python.png" class="images" *ngIf="isCandidateSkill('Python')"
-         style="width:128px;height:128px;"/>
-    <img src="../../../public/images/Java.png" class="images" *ngIf="isCandidateSkill('Java')"
-         style="width:128px;height:128px;">
-    <img src="../../../public/images/Ruby.png" class="images" *ngIf="isCandidateSkill('Ruby')"
-         style="width:128px;height:128px;">
-    <img src="../../../public/images/CSharp.png" class="images" *ngIf="isCandidateSkill('C#')"
-         style="width:128px;height:128px;">
-    <img src="../../../public/images/Selenium.png" class="images" *ngIf="isCandidateSkill('Selenium')"
-         style="width:128px;height:128px;">
+    <img src="../../../public/images/Python.png" *ngIf="isCandidateSkill('Python')"/>
+    <img src="../../../public/images/Java.png" *ngIf="isCandidateSkill('Java')"/>
+    <img src="../../../public/images/Ruby.png" *ngIf="isCandidateSkill('Ruby')"/>
+    <img src="../../../public/images/CSharp.png" *ngIf="isCandidateSkill('C#')"/>
+    <img src="../../../public/images/Selenium.png" *ngIf="isCandidateSkill('Selenium')"/>
 </div>
