--- a/src/app/pair-with/pair-with.component.html
+++ b/src/app/pair-with/pair-with.component.html
@@ -1,3 +1,4 @@
+<h1>RecruitX</h1>
 <div>
     <img src="../../../public/images/Pair.png" style="width:170px; height:120px;"/>
     <div class="title">Do you want pair with?</div>
