--- a/src/app/skills-stats/skills-stats.component.html
+++ b/src/app/skills-stats/skills-stats.component.html
@@ -1,3 +1,4 @@
+<h1>RecruitX</h1>
 <img src="../../../public/images/Bulb.png"/>
 <div class="title">Are you comfortable with?</div>
 <div class="images">
