--- a/src/app/interview-stats/interview-stats.component.html
+++ b/src/app/interview-stats/interview-stats.component.html
@@ -1,3 +1,4 @@
+<h1>RecruitX</h1>
 <div>
     <div class="title">Upcoming interviews</div>
     <div class="circle qa"><span>QA: {{getInterviewsFor("QA")}}</span></div>
