--- a/src/app/line-chart/line-chart.component.html
+++ b/src/app/line-chart/line-chart.component.html
@@ -1,3 +1,4 @@
+<h1>RecruitX</h1>
 <div class="row">
     <div class="col-md-6">
         <div style="display: block;" *ngIf="lineChartData().length >0">
