--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <main>
-    <h1>RecruitX</h1>
-    <pair-with *ngIf="pageNumber === 0" && *ngIf="hasSignUps()" [interviews]="interviews"></pair-with>
+    <pair-with *ngIf="pageNumber === 0 && hasSignUps()" [interviews]="interviews"></pair-with>
     <to-thank *ngIf="pageNumber === 1" [interviews]="interviews"></to-thank>
     <skills-stats *ngIf="pageNumber === 2" [interviews]="interviews"></skills-stats >
     <interview-stats *ngIf="pageNumber === 3" [interviews]="interviews"></interview-stats>
