--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,9 +34,10 @@ body {
 }
 
 .panelists {
-    font-size: 60px;
-    line-height: 1.3em;
+    font-size: 45px;
     text-align: center;
+    display: inline-block;
+    padding-left: 25px;
 }
 
 img {
@@ -52,4 +53,8 @@ img {
 .row {
     width: 100%;
     height: 600px;
+}
+.fa-3x {
+    color: #7d0084;
+    font-size: 3em;
 }
