--- a/src/app/pair-with/pair-with.component.html
+++ b/src/app/pair-with/pair-with.component.html
@@ -2,7 +2,9 @@
 <div>
     <img src="../../../public/images/Pair.png" style="width:170px; height:120px;"/>
     <div class="title">Do you want pair with?</div>
-    <div *ngFor="let panelist of getPanelistsWithPartiallyFilledInterviews()">
-        <div class="panelists">{{panelist}}</div>
+    <div class="panelists" *ngFor="let panelist of getPanelistsWithPartiallyFilledInterviews()">
+        <i class="fa fa-user fa-3x" aria-hidden="true"></i>
+        <div>{{panelist}}</div>
     </div>
+
 </div>
